...
                    )
                }

                // Amounts Column
                Column(horizontalAlignment = Alignment.End) {
                    Text(
                        text = "PENDING",
                        style = MaterialTheme.typography.labelSmall.copy(fontWeight = FontWeight.Bold),
                        color = Color.Black.copy(alpha = 0.5f)
                    )
                    Text(
                        text = if (isTotalVisible) format.format(pending) else "****",
                        style = MaterialTheme.typography.titleLarge.copy(fontWeight = FontWeight.Bold),
                        color = if (isTotalVisible) MaterialTheme.colorScheme.primary else Color.Black.copy(alpha = 0.5f)
                    )
                    Spacer(modifier = Modifier.height(4.dp))
                    Text(
                        text = if (isTotalVisible) "Orig: ${format.format(list.totalEstimated)}" else "Orig: ****",
...
